--- a/SYMFONY/templates/client/demande.html.twig
+++ b/SYMFONY/templates/client/demande.html.twig
@@ -25,6 +25,7 @@
 			<div class="doubleChamp">
 				{{ form_row(form.adresse.number,{'attr':{'placeholder':"7"}})}}
 				{{ form_row(form.adresse.street,{'attr':{'placeholder':"Rue de la gare"}})}}
+				<div id="adresse-suggestions"></div>
 			</div>
 			<div class="doubleChamp">
 				{{ form_row(form.adresse.city,{'attr':{'placeholder':"Lille"}})}}
