--- a/SYMFONY/assets/styles/app.css
+++ b/SYMFONY/assets/styles/app.css
@@ -13,13 +13,14 @@ h6 {
 /* home */
 .container {
   padding-inline: 10%;
+  background-color: white;
+
 }
 .divIntro {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 5%;
-  margin-bottom: 5%;
+ 
 }
 .intro {
   font-size: 32px;
@@ -225,9 +226,8 @@ label {
 body {
     margin: 0;
     padding: 0;
-    background-color: #D9D9D9
- ;
-   
+    background-color: #D9D9D9;
+    
 
 }
 /* general */
@@ -637,6 +637,8 @@ button:hover {
   justify-content: space-between;
   width: 100%;
   align-items: center;
+  background-color: white;
+ 
 }
 
 .navbar-item {
@@ -644,7 +646,8 @@ button:hover {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 40rem;
+  width: 30rem;
+  margin-right: 15%;
 }
 
 .nav-item {
@@ -661,12 +664,28 @@ button:hover {
 
 .nav-link p {
   font-family: 'Roboto', sans-serif;
-  color: black; 
+  color: #85ba22; 
   border-radius: 30px;
-  
+  text-decoration: none;
+  font-size: 20px;
   
 }
 
 .nav-link p:hover {
-  background-color: white;
+  background-color:#2678d1;
+  color: white;
+}
+
+.bandeau img {
+  width: 100% ;
+  transform: rotate(180deg);
+ 
+}
+.nav-link {
+  text-decoration: none; /* Supprimer le soulignement des liens */
+}
+.nav-item.espace-salarie {
+  position: absolute; /* Permet de positionner l'élément absolument par rapport à son conteneur */
+  top: 0; /* Positionner l'élément tout en haut */
+  right: 0; /* Positionner l'élément tout à droite */
 }
