fialisation feature autocomplete et ajout du style

--- a/SYMFONY/assets/styles/app.css
+++ b/SYMFONY/assets/styles/app.css
@@ -1,4 +1,3 @@
-
 @import url("https ://fonts.googleapis.com/css2 ?family=Lato :wght@400 ; 700; 900&family=Roboto :ital,wght@0,100 ; 0,300; 0,400; 0,500; 0,700; 0,900; 1,100; 1,300; 1,400; 1,500; 1,700; 1 900&display=swap");
 /* Global  */
 p,
@@ -223,401 +222,421 @@ label {
   box-shadow: 0px 4px 4px #4a4a4a inset;
 }
 body {
-    margin: 0;
-    padding: 0;
-    background-color: #D9D9D9
- ;
-   
-
+  margin: 0;
+  padding: 0;
+  background-color: #d9d9d9;
+}
+/* Auto complete adresse */
+#adresse-suggestions {
+  background-color: white;
+  border: 1px solid #77b800;
+  margin-bottom: 10px;
+}
+#adresse-suggestions div {
+  padding: 5px;
+  cursor: pointer;
+}
+#adresse-suggestions div:hover {
+  background-color: #77b800;
+}
+.displayNone {
+  display: none;
+}
+.displayBlock {
+  display: block;
 }
 /* general */
 
-
 /* nav e */
 .navbarE {
-    background-color: #77B800;
-    margin-right: auto;
-    margin-left: auto;
-    height: 121px;
-    width: 1596px;
-    display: flex;
-    align-items: center;
-    border-radius: 1cqmax;
-    justify-content: center;
+  background-color: #77b800;
+  margin-right: auto;
+  margin-left: auto;
+  height: 121px;
+  width: 1596px;
+  display: flex;
+  align-items: center;
+  border-radius: 1cqmax;
+  justify-content: center;
 }
 
 .navE-links {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex; 
-    
-
-    
-    
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
 
 .navE-links li {
-    padding: 10px 20px;
-    margin-right: 35px;
-   
+  padding: 10px 20px;
+  margin-right: 35px;
 }
 
 .navE-links li a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-    font-family: bold italic;
-    font-size: 20px;
-    
-    
-   
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  font-family: bold italic;
+  font-size: 20px;
 }
 
 .navE-links li a:hover {
-    color: #000;
-    background-color: #fff;
+  color: #000;
+  background-color: #fff;
 }
 
-
-
-
 .navE-links li:nth-child(1) {
-    margin-left: 40px; 
+  margin-left: 40px;
 }
 
 /* login.html.twig */
 
 .navbarCo {
-    height: 125px;
-    background-color: #FFFFFF;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 125px;
+  background-color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .contentCo {
-    width: 960px; /* Largeur de 960px */
-    margin: 0 auto; /* Marge automatique sur les côtés pour centrer */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: calc(100vh - 125px); /* Hauteur de la fenêtre moins la hauteur de la navbar */
-    background-color: #FFFFFF;
-    height: 751px;
-    margin-top: 3%;
+  width: 960px; /* Largeur de 960px */
+  margin: 0 auto; /* Marge automatique sur les côtés pour centrer */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: calc(
+    100vh - 125px
+  ); /* Hauteur de la fenêtre moins la hauteur de la navbar */
+  background-color: #ffffff;
+  height: 751px;
+  margin-top: 3%;
 }
 .form-containerCo {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-input[type="emailCo"], input[type="passwordCo"] {
-    width: 484px;
-    height: 51.97px;
-    border-radius: 50px;
-    border: 1px solid #CCCCCC;
-    padding: 10px 15px;
-    margin-bottom: 20px;
-    box-sizing: border-box;
-    position: relative;
+input[type="emailCo"],
+input[type="passwordCo"] {
+  width: 484px;
+  height: 51.97px;
+  border-radius: 50px;
+  border: 1px solid #cccccc;
+  padding: 10px 15px;
+  margin-bottom: 20px;
+  box-sizing: border-box;
+  position: relative;
 }
 
-input[type="emailCo"]::before, input[type="passwordCo"]::before {
-    content: url(email_icon.png); /* Remplacez 'email_icon.png' par le chemin de votre icône email */
-    position: absolute;
-    left: 30px;
-    top: 50%;
-    transform: translateY(-50%);
+input[type="emailCo"]::before,
+input[type="passwordCo"]::before {
+  content: url(email_icon.png); /* Remplacez 'email_icon.png' par le chemin de votre icône email */
+  position: absolute;
+  left: 30px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
-input[type="emailCo"]::after, input[type="passwordCo"]::after {
-    content: "";
-    position: absolute;
-    height: 80%;
-    width: 1px;
-    background-color: #CCCCCC;
-    top: 10%;
-    right: 30px;
+input[type="emailCo"]::after,
+input[type="passwordCo"]::after {
+  content: "";
+  position: absolute;
+  height: 80%;
+  width: 1px;
+  background-color: #cccccc;
+  top: 10%;
+  right: 30px;
 }
 
-input[type="emailCo"]:focus, input[type="passwordCo"]:focus {
-    outline: none;
-    border-color: #3366FF;
+input[type="emailCo"]:focus,
+input[type="passwordCo"]:focus {
+  outline: none;
+  border-color: #3366ff;
 }
 
-input[type="emailCo"]:focus::before, input[type="passwordCo"]:focus::before {
-    filter: invert(35%) sepia(91%) saturate(1043%) hue-rotate(190deg) brightness(97%) contrast(97%);
+input[type="emailCo"]:focus::before,
+input[type="passwordCo"]:focus::before {
+  filter: invert(35%) sepia(91%) saturate(1043%) hue-rotate(190deg)
+    brightness(97%) contrast(97%);
 }
 
-input[type="emailCo"]:focus::after, input[type="passwordCo"]:focus::after {
-    background-color: #3366FF;
+input[type="emailCo"]:focus::after,
+input[type="passwordCo"]:focus::after {
+  background-color: #3366ff;
 }
 
 ::placeholder {
-    color: #999999;
+  color: #999999;
 }
 
-
-    button {
-        width: 484px; 
-        height: 51.97px;
-        border: none;
-        border-radius: 50px;
-        background-color: #2678D1;
-        color: #FFFFFF;
-        font-size: 30px;
-        cursor: pointer;
-        font-family:sans-serif;
-    }
-    
-
+button {
+  width: 484px;
+  height: 51.97px;
+  border: none;
+  border-radius: 50px;
+  background-color: #2678d1;
+  color: #ffffff;
+  font-size: 30px;
+  cursor: pointer;
+  font-family: sans-serif;
+}
 
 button:hover {
-    background-color: #0056b3;
+  background-color: #0056b3;
 }
 
 #h1Co {
-    font-size: 50px;
-    color: #2678D1;
-    
+  font-size: 50px;
+  color: #2678d1;
 }
 
 .input-iconCo {
-    position: relative;
+  position: relative;
 }
 
 .input-iconCo i {
-    position: absolute;
-    left: 0px;
-    top: 50%;
-    transform: translateY(-52%);
+  position: absolute;
+  left: 0px;
+  top: 50%;
+  transform: translateY(-52%);
 }
 
 .input-iconCo input {
-    padding-left: 60px; /* Pour laisser de l'espace à l'icône */
-    width: 484px;
-    height: 51.97px;
-    border-radius: 50px;
-    border: 1px solid #CCCCCC;
-    padding: 10px 15px;
-    margin-bottom: 20px;
-    box-sizing: border-box;
-    position: relative;
+  padding-left: 60px; /* Pour laisser de l'espace à l'icône */
+  width: 484px;
+  height: 51.97px;
+  border-radius: 50px;
+  border: 1px solid #cccccc;
+  padding: 10px 15px;
+  margin-bottom: 20px;
+  box-sizing: border-box;
+  position: relative;
 }
 
-.input-iconCo input::before, .input-iconCo input::before {
-    content: url(email_icon.png); /* Remplacez 'email_icon.png' par le chemin de votre icône email */
-    position: absolute;
-    left: 30px;
-    top: 50%;
-    transform: translateY(-50%);
+.input-iconCo input::before,
+.input-iconCo input::before {
+  content: url(email_icon.png); /* Remplacez 'email_icon.png' par le chemin de votre icône email */
+  position: absolute;
+  left: 30px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
-.input-iconCo input::after, .input-iconCo input::after {
-    content: "";
-    position: absolute;
-    height: 80%;
-    width: 1px;
-    background-color: #CCCCCC;
-    top: 10%;
-    right: 30px;
+.input-iconCo input::after,
+.input-iconCo input::after {
+  content: "";
+  position: absolute;
+  height: 80%;
+  width: 1px;
+  background-color: #cccccc;
+  top: 10%;
+  right: 30px;
 }
 
-.input-iconCo input:focus, .input-iconCo input:focus {
-    outline: none;
-    border-color: #3366FF;
+.input-iconCo input:focus,
+.input-iconCo input:focus {
+  outline: none;
+  border-color: #3366ff;
 }
 
-.input-iconCo input:focus::before, .input-iconCo input:focus::before {
-    filter: invert(35%) sepia(91%) saturate(1043%) hue-rotate(190deg) brightness(97%) contrast(97%);
+.input-iconCo input:focus::before,
+.input-iconCo input:focus::before {
+  filter: invert(35%) sepia(91%) saturate(1043%) hue-rotate(190deg)
+    brightness(97%) contrast(97%);
 }
 
-.input-iconCo input:focus::after, .input-iconCo input:focus::after {
-    background-color: #3366FF;
+.input-iconCo input:focus::after,
+.input-iconCo input:focus::after {
+  background-color: #3366ff;
 }
 
 ::placeholder {
-    color: #999999;
-    
+  color: #999999;
 }
 .remember-meCo,
 .forgot-passwordCo {
-    display: inline-block;
+  display: inline-block;
 }
 
 .forgot-passwordCo {
-    margin-left: 60px; /* Espacement de 160px */
+  margin-left: 60px; /* Espacement de 160px */
 }
 
 .flex-containerCo {
-    display: flex;
-    align-items: center; /* Alignement vertical */
+  display: flex;
+  align-items: center; /* Alignement vertical */
 }
 
-.remember-meCo, .forgot-passwordCo {
-    flex: 1; 
+.remember-meCo,
+.forgot-passwordCo {
+  flex: 1;
 }
 
 .connect-withCo {
-    text-align: center; /* Centrage horizontal */
+  text-align: center; /* Centrage horizontal */
 }
 
 /* google */
 
 .gsi-material-button {
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    appearance: none;
-    -webkit-appearance: none;
-    user-select: none;
-    background-color: #f2f2f2;
-    background-image: none;
-    border: none;
-    -webkit-border-radius: 20px;
-    border-radius: 20px;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    color: #1f1f1f;
-    cursor: pointer;
-    font-family: 'Roboto', arial, sans-serif;
-    font-size: 14px;
-    height: 40px;
-    letter-spacing: 0.25px;
-    outline: none;
-    overflow: hidden;
-    padding: 0 12px;
-    position: relative;
-    text-align: center;
-    -webkit-transition: background-color .218s, border-color .218s, box-shadow .218s;
-    transition: background-color .218s, border-color .218s, box-shadow .218s;
-    vertical-align: middle;
-    white-space: nowrap;
-    width: auto;
-    max-width: 400px;
-    min-width: min-content;
-  }
-  
-  .gsi-material-button .gsi-material-button-icon {
-    height: 20px;
-    margin-right: 12px;
-    min-width: 20px;
-    width: 20px;
-  }
-  
-  .gsi-material-button .gsi-material-button-content-wrapper {
-    -webkit-align-items: center;
-    align-items: center;
-    display: flex;
-    -webkit-flex-direction: row;
-    flex-direction: row;
-    -webkit-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    height: 100%;
-    justify-content: space-between;
-    position: relative;
-    width: 100%;
-  }
-  
-  .gsi-material-button .gsi-material-button-contents {
-    -webkit-flex-grow: 1;
-    flex-grow: 1;
-    font-family: 'Roboto', arial, sans-serif;
-    font-weight: 500;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    vertical-align: top;
-  }
-  
-  .gsi-material-button .gsi-material-button-state {
-    -webkit-transition: opacity .218s;
-    transition: opacity .218s;
-    bottom: 0;
-    left: 0;
-    opacity: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    max-width: 0;
-  }
-  
-  .gsi-material-button:disabled {
-    cursor: default;
-    background-color: #ffffff61;
-  }
-  
-  .gsi-material-button:disabled .gsi-material-button-state {
-    background-color: #1f1f1f1f;
-  }
-  
-  .gsi-material-button:disabled .gsi-material-button-contents {
-    opacity: 38%;
-  }
-  
-  .gsi-material-button:disabled .gsi-material-button-icon {
-    opacity: 38%;
-  }
-  
-  .gsi-material-button:not(:disabled):active .gsi-material-button-state, 
-  .gsi-material-button:not(:disabled):focus .gsi-material-button-state {
-    background-color: #001d35;
-    opacity: 12%;
-  }
-  
-  .gsi-material-button:not(:disabled):hover {
-    -webkit-box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .30), 0 1px 3px 1px rgba(60, 64, 67, .15);
-    box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .30), 0 1px 3px 1px rgba(60, 64, 67, .15);
-  }
-  
-  .gsi-material-button:not(:disabled):hover .gsi-material-button-state {
-    background-color: #001d35;
-    opacity: 8%;
-  }
- /* Liste Personnel */
- .divTable{
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  appearance: none;
+  -webkit-appearance: none;
+  user-select: none;
+  background-color: #f2f2f2;
+  background-image: none;
+  border: none;
+  -webkit-border-radius: 20px;
+  border-radius: 20px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  color: #1f1f1f;
+  cursor: pointer;
+  font-family: "Roboto", arial, sans-serif;
+  font-size: 14px;
+  height: 40px;
+  letter-spacing: 0.25px;
+  outline: none;
+  overflow: hidden;
+  padding: 0 12px;
+  position: relative;
+  text-align: center;
+  -webkit-transition: background-color 0.218s, border-color 0.218s,
+    box-shadow 0.218s;
+  transition: background-color 0.218s, border-color 0.218s, box-shadow 0.218s;
+  vertical-align: middle;
+  white-space: nowrap;
+  width: auto;
+  max-width: 400px;
+  min-width: min-content;
+}
+
+.gsi-material-button .gsi-material-button-icon {
+  height: 20px;
+  margin-right: 12px;
+  min-width: 20px;
+  width: 20px;
+}
+
+.gsi-material-button .gsi-material-button-content-wrapper {
+  -webkit-align-items: center;
+  align-items: center;
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  height: 100%;
+  justify-content: space-between;
+  position: relative;
+  width: 100%;
+}
+
+.gsi-material-button .gsi-material-button-contents {
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+  font-family: "Roboto", arial, sans-serif;
+  font-weight: 500;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  vertical-align: top;
+}
+
+.gsi-material-button .gsi-material-button-state {
+  -webkit-transition: opacity 0.218s;
+  transition: opacity 0.218s;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  max-width: 0;
+}
+
+.gsi-material-button:disabled {
+  cursor: default;
+  background-color: #ffffff61;
+}
+
+.gsi-material-button:disabled .gsi-material-button-state {
+  background-color: #1f1f1f1f;
+}
+
+.gsi-material-button:disabled .gsi-material-button-contents {
+  opacity: 38%;
+}
+
+.gsi-material-button:disabled .gsi-material-button-icon {
+  opacity: 38%;
+}
+
+.gsi-material-button:not(:disabled):active .gsi-material-button-state,
+.gsi-material-button:not(:disabled):focus .gsi-material-button-state {
+  background-color: #001d35;
+  opacity: 12%;
+}
+
+.gsi-material-button:not(:disabled):hover {
+  -webkit-box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3),
+    0 1px 3px 1px rgba(60, 64, 67, 0.15);
+  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.3),
+    0 1px 3px 1px rgba(60, 64, 67, 0.15);
+}
+
+.gsi-material-button:not(:disabled):hover .gsi-material-button-state {
+  background-color: #001d35;
+  opacity: 8%;
+}
+/* Liste Personnel */
+.divTable {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
- }
- .divTableBtn{
+}
+.divTableBtn {
   display: flex;
   align-items: center;
   justify-content: center;
- }
- .tableListePersonnel{
+}
+.tableListePersonnel {
   width: 60%;
   border-collapse: collapse;
- }
+}
 
- th, td,tr{
+th,
+td,
+tr {
   border: 2px solid #85ba22;
   font-size: 21px;
   padding: 20px;
- }
- .btnModif{
+}
+.btnModif {
   padding: 8px;
   padding-left: 13px;
   padding-right: 13px;
   margin: 5px;
   border-radius: 25px;
- }
- .btnSup{
-  background-color: #ED3939;
- }
+}
+.btnSup {
+  background-color: #ed3939;
+}
 /* pagination liste personnel*/
- .pagination{
+.pagination {
   display: flex;
   justify-content: space-evenly;
   margin: 20px;
   width: 60%;
- }
- .btnPagination{
+}
+.btnPagination {
   color: #2678d1;
   background-color: white;
   border: 1px solid #2678d1;
@@ -625,9 +644,9 @@ button:hover {
   padding-left: 10px;
   padding-right: 10px;
   text-decoration: none;
- }
- .pageActuelle{
+}
+.pageActuelle {
   color: white;
   background-color: #2678d1;
   border: none;
- }
+}
