--- a/SYMFONY/assets/styles/app.css
+++ b/SYMFONY/assets/styles/app.css
@@ -1,5 +1,5 @@
 
-@import url("https ://fonts.googleapis.com/css2 ?family=Lato :wght@400 ; 700; 900&family=Roboto :ital,wght@0,100 ; 0,300; 0,400; 0,500; 0,700; 0,900; 1,100; 1,300; 1,400; 1,500; 1,700; 1 900&display=swap");
+/* @import url("https ://fonts.googleapis.com/css2 ?family=Lato :wght@400 ; 700; 900&family=Roboto :ital,wght@0,100 ; 0,300; 0,400; 0,500; 0,700; 0,900; 1,100; 1,300; 1,400; 1,500; 1,700; 1 900&display=swap"); */
 /* Global  */
 p,
 h1,
@@ -226,7 +226,7 @@ label {
 body {
     margin: 0;
     padding: 0;
-    background-color: #D9D9D9;
+    
     
 
 }
@@ -638,7 +638,8 @@ button:hover {
   width: 100%;
   align-items: center;
   background-color: white;
- 
+  
+  
 }
 
 .navbar-item {
@@ -649,10 +650,8 @@ button:hover {
   width: 30rem;
   margin-right: 15%;
 }
-
 .nav-item {
   text-align: center;
-  
 }
 
 .nav-link img {
@@ -664,28 +663,42 @@ button:hover {
 
 .nav-link p {
   font-family: 'Roboto', sans-serif;
-  color: #85ba22; 
+  color: #85ba22;
   border-radius: 30px;
   text-decoration: none;
   font-size: 20px;
-  
 }
 
 .nav-link p:hover {
-  background-color:#2678d1;
+  background-color: #2678d1;
   color: white;
 }
 
-.bandeau img {
-  width: 100% ;
-  transform: rotate(180deg);
- 
-}
 .nav-link {
   text-decoration: none; /* Supprimer le soulignement des liens */
 }
+
 .nav-item.espace-salarie {
   position: absolute; /* Permet de positionner l'élément absolument par rapport à son conteneur */
   top: 0; /* Positionner l'élément tout en haut */
   right: 0; /* Positionner l'élément tout à droite */
+}
+
+.nav-item.espace-salarie p {
+  font-size: 20px; /* Ajuster la taille du texte selon vos préférences */
+}
+.example-wrapper{
+ width: 50%;
+ margin-left: 25%;
+ padding-top: 5%;
+  
+}
+.form-stat {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  
+}
+.form-label, .form-select, .form-button {
+  margin-bottom: 20px;
 }
