Modification entité et bdd migrations, finalisation de la features et  ajout flash sur la home

--- a/SYMFONY/templates/client/demande.html.twig
+++ b/SYMFONY/templates/client/demande.html.twig
@@ -39,6 +39,7 @@
 			{{ form_row(form.operation.type)}}
 			{{ form_row(form.operation.dateForecast)}}
 			{{ form_row(form.operation.description,{'attr':{'placeholder':"Description de votre demande..."}})}}
+			{{ form_row(form.operation.photo)}}
 		</div>
 	
 		 {{form_end(form)}}
