--- a/SYMFONY/templates/client/description.html.twig
+++ b/SYMFONY/templates/client/description.html.twig
@@ -10,6 +10,7 @@
         {{form_row(form.type)}}
         {{form_row(form.dateForecast)}}
         {{form_row(form.description,{'attr':{'placeholder':"Description de votre demande..."}})}}
+        {{form_row(form.photo)}}
         {{form_end(form)}}
     </div>
 
