--- a/SYMFONY/templates/client/demande.html.twig
+++ b/SYMFONY/templates/client/demande.html.twig
@@ -1,6 +1,13 @@
 {% extends "base.html.twig" %}
 {% block title %}Demande d'opération
 {% endblock %}
+{% block javascripts %}
+	<script src="{{ asset('../assets/apiAdresse.js') }}"></script>
+	<script src="{{ asset('./../assets/inputFile.js') }}"></script>
+	{% block importmap %}
+		{{ importmap('app') }}
+	{% endblock %}
+{% endblock %}
 {% block body %}
 
 	{% set titre = "Demande d'opération de nettoyage" %}
