resolution erreur bouton prendre op

--- a/SYMFONY/templates/employe/operation.html.twig
+++ b/SYMFONY/templates/employe/operation.html.twig
@@ -1,6 +1,15 @@
 {% extends 'base.html.twig' %}
 
+
+{% block javascripts %}
+			<script src="{{ asset('./../assets/operation.js') }}"></script>
+            {% block importmap %}
+				{{ importmap('app') }}
+			{% endblock %}
+		{% endblock %}
+
 {% block body %}
+     
   <div class="navbarOp"></div>
 
 <nav class="navbarE">
@@ -22,9 +31,12 @@
         <div class="date">{{ operation.dateStart|date('d/m/Y') }}</div>
         <div class="status">{{ operation.statut }}</div>
         <div class="description">{{ operation.description }}</div>
-        <button class="buttonOp">Prendre</button>
+        <form action="{{ path('app_operation_prendre', {'id': operation.id}) }}" method="post" class="operation-form">
+            <button type="submit" class="prendre-button buttonOp">Prendre</button>
+        </form>
     </div>
 {% endfor %}
 
     </div>
+
 {% endblock %}
