--- a/SYMFONY/templates/client/description.html.twig
+++ b/SYMFONY/templates/client/description.html.twig
@@ -1,6 +1,13 @@
 {% extends "base.html.twig" %}
 {% block title %}Description
 {% endblock %}
+{% block javascripts %}
+	<script src="{{ asset('../assets/apiAdresse.js') }}"></script>
+	<script src="{{ asset('./../assets/inputFile.js') }}"></script>
+	{% block importmap %}
+		{{ importmap('app') }}
+	{% endblock %}
+{% endblock %}
 {% block body %}
     {% set titre = "Description de votre demande" %}
 	{% include "base/blueBar.html.twig" %}
